[package]
name = "common-good-cli"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
hex = "0.4"
schnorrkel = "0.9"
rand = "0.7"
