[package]
name = "common-good-storage-cli"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
structopt = "0.3"
hex = "0.4"
schnorrkel = "0.9"
rand = "0.7"
bls-signatures = "0.8.0"
hex-literal = "0.3"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

